tests/spec/format/snapshots/format_fstring_long_interpolation_stays_single_line.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { let msg = f\"You cannot use another ender pearl for {shared.format_duration(remaining)}.\" }"
---
fn test() {
  let msg = f"You cannot use another ender pearl for {shared.format_duration(remaining)}."
}
