tests/spec/format/snapshots/format_fstring_match_interpolation_stays_single_line.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { let m = f\"v {match x { 1 => \"a\", _ => \"b\" }}\" }"
---
fn test() {
  let m = f"v {match x { 1 => "a", _ => "b" }}"
}
