tests/spec/format/snapshots/format_fstring_multiline_text_roundtrip.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() { let s = f"hello
  {name}
  world" }
---
fn test() {
  let s = f"hello
{name}
world"
}
