tests/spec/format/snapshots/format_fstring_struct_call_interpolation_stays_single_line.snap
---
source: tests/spec/format/mod.rs
description: "input: fn test() { let msg = f\"point {Point { x: some_long_value_here, y: another_long_value_here, z: third_value }}\" }"
---
fn test() {
  let msg = f"point {Point { x: some_long_value_here, y: another_long_value_here, z: third_value }}"
}
