tests/spec/format/snapshots/format_multiline_string_in_call_forces_arg_wrap.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() { foo("a
  b", very_long_argument_name_that_should_force_wrapping_because_it_is_extremely_long, another_argument_name_that_is_also_long) }
---
fn test() {
  foo(
    "a
b",
    very_long_argument_name_that_should_force_wrapping_because_it_is_extremely_long,
    another_argument_name_that_is_also_long,
  )
}
