tests/spec/format/snapshots/format_string.snap
---
source: tests/spec/format/mod.rs
description: "fn test() { f\"hello {name}\" }"
---
fn test() {
  f"hello {name}"
}
