tests/spec/format/snapshots/format_string_multiline_roundtrip.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn test() { let s = "a
  b"; foo(s) }
---
fn test() {
  let s = "a
b"
  foo(s)
}
