tests/spec/format/snapshots/function_generic.snap
---
source: tests/spec/format/mod.rs
description: "fn identity<T>(x: T) -> T { x }"
---
fn identity<T>(x: T) -> T {
  x
}
