tests/spec/format/snapshots/function_generic_bounds.snap
---
source: tests/spec/format/mod.rs
description: "fn print<T: Display>(x: T) { x.to_string() }"
---
fn print<T: Display>(x: T) {
  x.to_string()
}
