tests/spec/format/snapshots/function_generic_multiple.snap
---
source: tests/spec/format/mod.rs
description: "fn pair<A, B>(a: A, b: B) -> (A, B) { (a, b) }"
---
fn pair<A, B>(a: A, b: B) -> (A, B) {
  (a, b)
}
