tests/spec/format/snapshots/function_multiline.snap
---
source: tests/spec/format/mod.rs
description: |-
  fn foo() {
    let x = 1;
    let y = 2;
    x + y
  }
---
fn foo() {
  let x = 1
  let y = 2
  x + y
}
